--- a/index.html
+++ b/index.html
@@ -68,16 +68,18 @@
                     <span class="my-prev-hook"></span>
                   </div>
                   <!-- next -->
-                  <div @click="activeIndex === images.length -1 ? activeIndex = 0 : activeIndex ++" class="my-next position-absolute">
+                  <div @click="activeIndex === images.length - 1 ? activeIndex = 0 : activeIndex++" class="my-next position-absolute">
                     <span class="my-next-hook"></span>
                   </div>
                   <!-- immagini interne -->
                   <img
-                    v-for="curObject in images"
-                    class="img-fluid my-thumbnail active"
+                    @click="activeIndex = index"
+                    v-for="(curObject,index) in images"
+                    class="img-fluid my-thumbnail"
                     :src="curObject.image"
                     :alt="curObject.title"
                   />
+                  
                   
                   <!-- etc ... -->
                 </div>
