fix: fixed some logic

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <button @click="isNext ? isNext = false : isNext = true" id="my-order-button" class="btn btn-primary">
                 Inverti l'ordine di scorrimento
               </button>
-              <button @click="isIntervalActive = !isIntervalActive" id="my-stop-button" class="btn btn-primary">
+              <button @click="handleStart" id="my-stop-button" class="btn btn-primary">
                 Interrompi / Fai ripartire lo scorrimento
               </button>
             </div>
