feat: removed some worlds

--- a/index.html
+++ b/index.html
@@ -86,9 +86,8 @@
                 </div>
               </div>
             </div>
-
             <div class="col-12 p-3" id="my-after-carousel">
-              <button @click="isNext ? isNext = false : isNext = true" id="my-order-button" class="btn btn-primary">
+              <button @click="isNext = !isNext" id="my-order-button" class="btn btn-primary">
                 Inverti l'ordine di scorrimento
               </button>
               <button @click="handleStart" id="my-stop-button" class="btn btn-primary">
